bugs and issues fixes: fix horizontal scroll, fix input name, fix select default color, fix gradients disappear and lines for safari and mozilla; add imgs-auto-change;

--- a/src/styles/components/gradients.scss
+++ b/src/styles/components/gradients.scss
@@ -1,4 +1,9 @@
 .gradient {
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+
   &.--hero-radial-gradient-top-right {
     position: absolute;
     width: 576px;
